# Geiger-Counter

./: CMakeLists.txt  Geiger.c
csv/: data_24-12-25-13-04.csv  data_24-12-25-13-25.csv  data_24-12-25-13-50.csv  data_24-12-25-14-00.csv  data_24-12-25-9-38.csv  data_25-12-25-16-45.txt  data_25-12-25-18-00.txt  data_25-12-25-20-00.txt
display/: CMakeLists.txt
display/include/display/: display.h
display/src/: display.c
py/: com.py  processing.py
txt/: data.txt  data_24-12-25-09-38.txt  data_24-12-25-13-04.txt  data_24-12-25-13-25.txt  data_24-12-25-13-50.txt  data_24-12-25-14-00.txt  data_28-12-25-15-05.txt
